--- a/_posts/2021-07-29-gpt3-part-2.md
+++ b/_posts/2021-07-29-gpt3-part-2.md
@@ -13,7 +13,15 @@ class: post-template
 subclass: 'post'
 ---
 
-# I tried GPT3, Here is what I observed - Part 2
+- [Spreadsheets](#spreadsheets)
+- [Generating Fill in the blank questions](#generating-fill-in-the-blank-questions)
+- [Solving Leetcode Coding Challenges](#solving-leetcode-coding-challenges)
+- [Decrypting AES256](#decrypting-aes256)
+- [Creating a new language](#creating-a-new-language)
+- [Trick Question on Football](#trick-question-on-football)
+- [Generating Essays](#generating-essays)
+- [Conclusion](#conclusion)
+
 
 ### Spreadsheets
 
